DevTools: return remote debugging targets sorted by last active time (as it was long ago).

BUG=658288
TBR=(api change)

Review-Url: https://codereview.chromium.org/2678783005
Cr-Commit-Position: refs/heads/master@{#448919}

Former-commit-id: 97088372718202b776960811b01ddb74eb5b95b1