content/browser/devtools/forwarding_agent_host.cc
@@ -76,4 +76,8 @@ bool ForwardingAgentHost::Close() {
   return delegate_->Close();
 }
 
+base::TimeTicks ForwardingAgentHost::GetLastActivityTime() {
+  return delegate_->GetLastActivityTime();
+}
+
 }  // content
